Clean up the custom locale data
:Release Notes:
Overriding locale data files are updated dut to the
jsonoverrigin tool code is updated.

:Detailed Notes:

:Testing Performed:

:QA Notes:

:Issues Addressed:
[PLAT-124966] Fix iLib locale data overriding code and
              review lg override data

Fix iLib locale data overriding code and review lg override data

Change-Id: I328c7857b40b4047d02b3bd773d5f4026608e305

--- a/locale/fa/AF/localeinfo.json
+++ b/locale/fa/AF/localeinfo.json
@@ -1,1 +1,1 @@
-{"numfmt":{"script":"arabext","decimalChar":"/","groupChar":"٫","pctChar":"%","exponential":"×۱۰^","currencyFormats":{"common":"{n} ؜{s}","commonNegative":"؜{n}- ؜{s}"},"negativenumFmt":"‎−{n}","negativepctFmt":"‪-{n} %","pctFmt":"‪{n} %","digits":"۰۱۲۳۴۵۶۷۸۹","useNative":true},"locale":"fa-AF"}
+{"numfmt":{"currencyFormats":{"common":"{n} ؜{s}","commonNegative":"؜{n}- ؜{s}"},"decimalChar":"/","groupChar":"٫","pctChar":"%","exponential":"×۱۰^","negativenumFmt":"‎−{n}","negativepctFmt":"‪-{n} %","pctFmt":"‪{n} %"},"locale":"fa-AF"}
