--- a/locale/und/GB/localeinfo.json
+++ b/locale/und/GB/localeinfo.json
@@ -1,1 +1,1 @@
-{"currency":"GBP","firstDayOfWeek":1,"region.name":"United Kingdom","timezone":"Europe/London","units":"imperial","locale":"GB"}
+{"currency":"GBP","firstDayOfWeek":1,"region.name":"United Kingdom","timezone":"Europe/London","locale":"GB"}
