--- a/locale/zoneinfo/America/Cuiaba.json
+++ b/locale/zoneinfo/America/Cuiaba.json
@@ -1,1 +1,1 @@
-{"e":{"m":2,"r":"0>15","t":"0:0"},"f":"-04/-03","o":"-4:0","c":"BR","n":"Central Brazilian {c} Time"}
+{"f":"-04/-03","o":"-4:0","c":"BR","n":"Central Brazilian {c} Time"}
