Sync up iLib 14.18.0
:Release Notes:
Sync up opensource iLib 14.18.0

:Detailed Notes:
Sync up iLib 14.18.0 (https://github.com/iLib-js/iLib/releases)

* Updated pseudo strings to be encapsulated with square brackets
  so that you can tell when the resource string starts and ends.
* Added more pseudomap data for use in testing different fonts
  using pseudo locales.
  -Added a "tall" property in some pseudomap.json files which
  gives the tallest glyph in the script. This tallest glyph is included
  at the beginning of a pseudo localized string in order to test if
  there is enough room for the height of text in each UI element.

:Testing Performed:
N/A

Change-Id: I9b6844a501711996dd24fd8b353c6c4754b74fac

--- a/locale/zoneinfo/Pacific/Apia.json
+++ b/locale/zoneinfo/Pacific/Apia.json
@@ -1,1 +1,1 @@
-{"c":"WS","e":{"m":4,"r":"0>1","t":"4:0"},"f":"+13/+14","n":"Samoa {c} Time","o":"13:0"}
+{"c":"WS","f":"+13/+14","n":"Samoa {c} Time","o":"13:0"}
