--- a/locale/zoneinfo/Pacific/Fiji.json
+++ b/locale/zoneinfo/Pacific/Fiji.json
@@ -1,1 +1,1 @@
-{"c":"FJ","e":{"m":1,"r":"0>12","t":"3:0"},"f":"+12/+13","n":"Fiji {c} Time","o":"12:0"}
+{"c":"FJ","f":"+12/+13","n":"Fiji {c} Time","o":"12:0"}
